# 566well-being

./: .gitignore  README.md  feature_make.ipynb  pyproject.toml  synthetic control.Rmd
1.feature_make/: feature_EDA.ipynb  feature_make_v3.ipynb
1.feature_make/old/: feature_make.ipynb
2.causal discovery/: causal-discovery.ipynb  pc_ici.parquet  pc_ici_longest.parquet
2.causal discovery/old/: causal-discovery.R  causal-discovery.ipynb
2.causal discovery/pc-results/: edgelist-Y1.txt  edgelist-Y2.txt  edgelist-Y3.txt  edgelist-Y4.txt  edgelist-Y5.txt  edgelist-Y6.txt  edgelist-Y7.txt  fit-Y1.txt  fit-Y2.txt  fit-Y3.txt  fit-Y4.txt  fit-Y5.txt  fit-Y6.txt  fit-Y7.txt
3.Counterfactual and ACEs estimation/: inspect_pre_and_post.ipynb  models.py  models_linear.ipynb  models_rf.ipynb  names.py  results.csv  results.ipynb  utils.py
3.Counterfactual and ACEs estimation/pictures/: README.txt
EDA/: profile-demographics (1).html
data/: daggitty_output.txt  features_dropna.csv
notebooks/: fci.dot  feature_EDA.ipynb  feature_make.ipynb  inspect_pre_and_post.ipynb  models.ipynb  models.py  models_k.ipynb  models_kernel.ipynb  models_lasso.ipynb  models_linear.ipynb  models_nn.ipynb  models_poly.ipynb  models_rf.ipynb  names.py  pc.dot  plotbigscatter.ipynb  pretty_logger.py  results.ipynb  sandbox.ipynb  sandbox_discovery.ipynb  sandbox_discovery_cl.ipynb
utils/: utils.py
