[tool.poetry]
name = "well-being566"
version = "0.1.0"
description = ""
authors = ["566wellbeing group"]
readme = "README.md"

packages = [
    { include = "utils" },
]

[tool.poetry.dependencies]
python =  ">=3.9,<3.10"
pandas = "^2.2.2"
torch = "^2.3.0"
matplotlib = "^3.9.0"
causal-learn = "^0.1.3.8"
dowhy = "^0.11.1"
cdt = "^0.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pandas-stubs = "^2.2.2.240514"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
