[tool.poetry]
name = "566well-being"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
scikit-learn = "^1.5.0"
humanize = "^4.9.0"
matplotlib = "^3.9.0"
black = "^24.4.2"
pandas-stubs = "^2.2.2.240514"
seaborn = "^0.13.2"
jinja2 = "^3.1.4"
cairosvg = "^2.7.1"
svglib = "^1.5.1"
reportlab = "^4.2.0"
openpyxl = "^3.1.2"
pdfkit = "^1.0.0"
weasyprint = "^62.1"


[tool.poetry.group.dev.dependencies]
coloredlogs = "^15.0.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
